--- a/views/post-screen.ejs
+++ b/views/post-screen.ejs
@@ -1,18 +1,24 @@
 <%- include('includes/header') %>
 
 <div class="container py-md-5 container--narrow">
+  <%- include('includes/flash') %>
   <div class="d-flex justify-content-between">
     <h2><%= post.title %></h2>
+    <% if(post.isVisitorOwner){ %>
     <span class="pt-2">
       <a
-        href="#"
+        href="/post/<%=post._id%>/edit"
         class="text-primary mr-2"
         data-toggle="tooltip"
         data-placement="top"
         title="Edit"
         ><i class="fas fa-edit"></i
       ></a>
-      <form class="delete-post-form d-inline" action="#" method="POST">
+      <form
+        class="delete-post-form d-inline"
+        action="/post/<%=post._id%>/delete"
+        method="POST"
+      >
         <button
           class="delete-post-button text-danger"
           data-toggle="tooltip"
@@ -23,6 +29,7 @@
         </button>
       </form>
     </span>
+    <% } %>
   </div>
 
   <p class="text-muted small mb-4">
@@ -33,7 +40,7 @@
   </p>
 
   <div class="body-content">
-    <p><%=post.body%></p>
+    <p><%-filterUserHTML(post.body)%></p>
   </div>
 </div>
 <%- include('includes/footer') %>
