--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/header') %>
 <div class="container py-md-5 container--narrow">
+  <%- include('includes/flash') %>  
   <h2>
     <img class="avatar-small" src="<%= profileAvatar %>" />
     <%=profileUsername%>
@@ -18,13 +19,16 @@
   </div>
 
   <div class="list-group">
+    <% posts.forEach((post)=>{ %>
     <a
-      href="/post/5c3af3dcc7d0ad0004e53b3d"
+      href="/post/<%=post._id %>"
       class="list-group-item list-group-item-action"
     >
       <img class="avatar-tiny" src="<%=profileAvatar%>" />
-      <strong>Example Post #1</strong> on 0/13/2019
+      <strong><%=post.title%></strong> on <%= post.createdDate.getMonth() +
+      1%>/<%=post.createdDate.getDate()%>/<%=post.createdDate.getFullYear()%>
     </a>
+    <% }) %>
   </div>
 </div>
 <%- include('includes/footer') %>
